--- a/XdsClient/XdsClient.csproj
+++ b/XdsClient/XdsClient.csproj
@@ -9,6 +9,7 @@
       <PackageReference Include="Envoy.Grpc" Version="1.0.1" />
       <PackageReference Include="Google.Protobuf" Version="3.14.0" />
       <PackageReference Include="Grpc.Net.Client" Version="2.34.0" />
+      <PackageReference Include="KubernetesClient" Version="4.0.3" />
     </ItemGroup>
 
 </Project>
