--- a/XdsClient/XdsClient.csproj
+++ b/XdsClient/XdsClient.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="KubernetesClient" Version="4.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IstioCaGrpc\IstioCaGrpc.csproj" />
+    </ItemGroup>
+
 </Project>
