--- a/XdsClient/XdsClient.csproj
+++ b/XdsClient/XdsClient.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Google.Protobuf" Version="3.14.0" />
       <PackageReference Include="Grpc.Net.Client" Version="2.34.0" />
       <PackageReference Include="KubernetesClient" Version="4.0.3" />
+      <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
