--- a/XdsClient/XdsClient.csproj
+++ b/XdsClient/XdsClient.csproj
@@ -1,20 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Envoy.Grpc" Version="1.0.1" />
-      <PackageReference Include="Google.Protobuf" Version="3.14.0" />
-      <PackageReference Include="Grpc.Net.Client" Version="2.34.0" />
+      <PackageReference Include="Google.Protobuf" Version="3.17.0" />
+      <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
       <PackageReference Include="KubernetesClient" Version="4.0.3" />
       <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
-    </ItemGroup>
+      <PackageReference Include="Grpc.Tools" Version="2.47.0" PrivateAssets="all" />
 
+    </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\IstioCaGrpc\IstioCaGrpc.csproj" />
+      <PackageReference Include="Skyman.Shared.Xds.Proto" Version="1.20.6-alpha1" IncludeAssets="none" PrivateAssets="all" GeneratePathProperty="true" />
+      <Protobuf Include="$(PkgSkyman_Shared_Xds_Proto)/Protos/**/*.proto" Access="Internal" ProtoRoot="$(PkgSkyman_Shared_Xds_Proto)/Protos" />
     </ItemGroup>
-
 </Project>
